rushed again, didn't it?

--- a/lexicon.html
+++ b/lexicon.html
@@ -10,17 +10,48 @@
   <link rel="canonical" href="https://entityworks.ai/lexicon.html">
 
   <style>
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-           line-height: 1.6; margin: 2rem auto; max-width: 900px; padding: 0 1rem; color: #111; }
-    header, footer { margin-bottom: 2rem; }
-    header h1 { font-size: 2rem; margin-bottom: 0.25rem; }
-    nav a { margin-right: 1rem; font-size: 0.95rem; text-decoration: none; color: #0057ff; }
-    nav a:hover { text-decoration: underline; }
-    h2 { margin-top: 2rem; }
-    dt { font-weight: 600; margin-top: 1.4rem; }
-    dd { margin-left: 0; margin-top: 0.3rem; }
-    .intro { margin-top: 1rem; }
-    .tagline { font-style: italic; margin-top: 0.5rem; }
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      line-height: 1.6;
+      margin: 2rem auto;
+      max-width: 900px;
+      padding: 0 1rem;
+      color: #111;
+    }
+    header, footer {
+      margin-bottom: 2rem;
+    }
+    header h1 {
+      font-size: 2rem;
+      margin-bottom: 0.25rem;
+    }
+    nav a {
+      margin-right: 1rem;
+      font-size: 0.95rem;
+      text-decoration: none;
+      color: #0057ff;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    h2 {
+      margin-top: 2rem;
+    }
+    dt {
+      font-weight: 600;
+      margin-top: 1.4rem;
+    }
+    dd {
+      margin-left: 0;
+      margin-top: 0.3rem;
+    }
+    .intro {
+      margin-top: 1rem;
+    }
+    .tagline {
+      font-style: italic;
+      margin-top: 0.5rem;
+    }
   </style>
 
   <script type="application/ld+json">
@@ -77,102 +108,128 @@
 
         <dt>AI Discoverability</dt>
         <dd>
-          AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.
+          AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent
+          people, organisations, relationships, and ideas.
         </dd>
 
         <dt>AI Perception</dt>
         <dd>
-          AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.
+          AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of
+          people, organisations, relationships, and ideas.
         </dd>
 
         <dt>Machine-Legibility</dt>
         <dd>
-          The degree to which a business’s information is structured, unambiguous, and readable by AI systems.
+          The degree to which a business’s information is structured, unambiguous, and readable by AI systems, independent
+          of how it appears to humans.
         </dd>
 
         <dt>Entity Clarity</dt>
         <dd>
-          How confidently an AI system can determine what an organisation is, what it does, and what it offers.
+          How confidently an AI system can determine what an organisation is, what it does, and what it offers,
+          based on the information available to it.
         </dd>
 
-        <dt>Entity Understanding Layer™</dt>
+        <dt>Entity Understanding Layer™ (EUL)</dt>
         <dd>
-          EntityWorks’ conceptual model describing observable patterns in how AI systems appear to form and maintain an understanding of entities.
+          A conceptual model within the discipline of AI Perception that provides a structured way to describe the behaviours
+          AI systems rely on when forming, updating, or expressing their understanding of people, organisations, relationships,
+          and ideas. It is organised around six core behaviours: Meaning Construction, Identity Embedding, Entity Corroboration,
+          Semantic Stabilisation, Conversational Surfacing, and Trust Resolution.
         </dd>
 
         <dt>Representation Drift</dt>
         <dd>
-          The gradual divergence between how a business presents itself and how AI systems come to describe it over time.
+          The gradual divergence between how a business describes itself and how AI systems come to describe it over time,
+          as new information appears or older signals persist in the system.
         </dd>
 
         <dt>Structured Data</dt>
         <dd>
-          Machine-readable information—such as schema.org, metadata, or structured definitions—that enables AI systems to reliably interpret entities.
+          Information expressed in machine-readable formats—such as schema.org JSON-LD, metadata fields, or well-formed tables—
+          that helps AI systems reliably interpret entities and their attributes.
         </dd>
 
         <dt>AI Readiness</dt>
         <dd>
-          The clarity, consistency, and alignment of a business’s public presence across the sources AI systems rely on.
+          The extent to which a business’s public footprint is clear, current, and aligned across the key sources AI systems
+          rely on when forming their understanding of that business.
         </dd>
 
         <dt>Continuous Optimisation</dt>
         <dd>
-          The ongoing process of maintaining and improving a business’s machine-readable presence as AI systems evolve.
+          The ongoing process of monitoring and adjusting a business’s machine-legible presence as AI systems, models,
+          and information ecosystems evolve, so that its representation remains accurate and resilient over time.
         </dd>
 
         <dt>Discoverability Score (0–100)</dt>
         <dd>
-          A structured score indicating how clearly AI systems can understand and represent a business.
+          A composite score, produced by the EntityWorks Discoverability Index™, indicating how clearly AI systems can
+          understand and represent a business or entity across the core dimensions of AI Discoverability.
         </dd>
 
         <dt>EDI Pillars</dt>
         <dd>
-          The three structural dimensions of the EDI: Structured Data, AI Readiness, and Continuous Optimisation.
+          The three structural dimensions used by the EntityWorks Discoverability Index™ (EDI):
+          (1) Structured Data, (2) AI Readiness, and (3) Continuous Optimisation. Together, they capture the core conditions
+          required for strong AI Discoverability.
         </dd>
 
         <dt>Profile Summary</dt>
         <dd>
-          A concise narrative describing how AI systems currently perceive and present a business.
+          A concise narrative, derived from EDI findings, describing how AI systems currently perceive and present a business—
+          highlighting what is clear, what is missing, and where the representation is drifting or fragmented.
         </dd>
 
         <dt>Priority Path</dt>
         <dd>
-          A sequenced set of recommendations designed to improve a business’s Discoverability Score.
+          A sequenced set of recommendations designed to improve a business’s Discoverability Score in the most efficient
+          and impactful order, based on the EDI assessment.
         </dd>
 
         <dt>Presence Stack™</dt>
         <dd>
-          A layered model describing the structural signals that influence how AI systems interpret, contextualise, and surface a business.
+          A layered model describing the structural components that shape how AI systems see, interpret, and prioritise a business’s
+          presence across the digital environment, with an emphasis on clarity, consistency, and contextual integrity.
         </dd>
 
         <dt>Inter-Source Alignment</dt>
         <dd>
-          The consistency between multiple public sources describing the same organisation.
+          The level of consistency between multiple public sources (such as the primary website, profiles, directories,
+          and knowledge graphs) when they describe the same organisation.
         </dd>
 
         <dt>Semantic Integrity</dt>
         <dd>
-          The preservation of meaning across channels so AI receives a coherent machine-readable identity.
+          The preservation of meaning across different descriptions, channels, and formats so that AI systems receive a coherent,
+          stable picture of the business rather than fragmented or contradictory narratives.
         </dd>
 
         <dt>Entity Surface Area</dt>
         <dd>
-          The breadth and depth of information available for AI systems to ingest about a business.
+          The total volume, diversity, and distribution of information about a business that is available for AI systems to ingest,
+          including both structured and unstructured data across multiple sources.
         </dd>
 
         <dt>Entity Collision Problem</dt>
         <dd>
-          A phenomenon where AI systems mistakenly merge multiple entities or split a single entity into conflicting identities due to unclear or inconsistent signals.
+          A machine-era failure mode where AI systems mistakenly merge two or more distinct entities into one, or split a single
+          entity into multiple conflicting identities. Collisions typically occur when machine-legible signals are unclear,
+          inconsistent, or overlapping, and they highlight the need for strong AI Discoverability and coherent machine identity.
         </dd>
 
         <dt>EntityWorks Discoverability Index™ (EDI)</dt>
         <dd>
-          A structured 0–100 framework for assessing AI Discoverability and producing a Profile Summary and Priority Path.
+          A structured, measurable framework for assessing AI Discoverability and generating a Discoverability Score,
+          Profile Summary, and Priority Path for a business. The EDI translates the principles of AI Discoverability into
+          a practical 0–100 assessment of how clearly AI systems understand and represent a specific entity.
+          See <a href="/discoverability-index.html">EDI overview</a>.
         </dd>
 
         <dt>Legacy SEO</dt>
         <dd>
-          Traditional search-oriented optimisation designed for human retrieval, not AI interpretation.
+          A shorthand for traditional, search-engine-focused optimisation practices that primarily aim at human search rankings
+          and keyword performance, rather than helping AI systems correctly interpret and represent entities.
         </dd>
 
       </dl>
@@ -187,7 +244,9 @@
   <script>
     fetch("/footer.html")
       .then((response) => response.text())
-      .then((data) => { document.getElementById("footer").innerHTML = data; });
+      .then((data) => {
+        document.getElementById("footer").innerHTML = data;
+      });
   </script>
 </body>
 </html>
