--- a/why-the-edi-matters.html
+++ b/why-the-edi-matters.html
@@ -104,9 +104,10 @@
 
   <h2>1. From Principle to Practical Value</h2>
   <p>
-    AI Discoverability describes how clearly an organisation may be understood by AI systems. The EntityWorks
-    Discoverability Index™ (EDI) turns this into a measurable business tool, offering a structured way to understand how an
-    organisation might appear inside AI models and where clarity could be improved.
+    <strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify, understand,
+    and represent people, organisations, relationships, and ideas. The <strong>EntityWorks Discoverability Index™ (EDI)</strong>
+    is the applied, measurable expression of that discipline — a structured way to review how an organisation is currently
+    understood by AI systems and where that understanding can be strengthened.
   </p>
   <p>
     The EDI is designed to help leaders:
@@ -121,7 +122,7 @@
   <p>
     The goal of the EDI is simple:
   </p>
-  <p><em>To provide a clear, interpretable view of how AI systems may understand an organisation.</em></p>
+  <p><em>To provide a clear, interpretable view of how AI systems may understand an organisation today, and how well its current signals support that understanding.</em></p>
 
   <p>The EDI examines:</p>
   <ul>
@@ -196,14 +197,15 @@
 
   <h2>6. Why EntityWorks Is Positioned to Deliver the EDI</h2>
   <p>
-    EntityWorks is well placed to deliver the EDI because it:
+    EntityWorks is well placed to deliver the EDI because it works at the intersection of <strong>AI Perception</strong> and
+    <strong>AI Discoverability</strong>, and because it:
   </p>
   <ul>
-    <li>defined AI Discoverability as a discipline</li>
-    <li>built the EDI as a principle-based model</li>
-    <li>introduced the Entity Understanding Layer™</li>
-    <li>publishes its work transparently</li>
-    <li>records and timestamps key developments</li>
+    <li>formalised AI Discoverability as a discipline, publishing clear definitions, structure, and a measurable standard</li>
+    <li>built the EntityWorks Discoverability Index™ as a principle-based, 0–100 framework for applied AI Discoverability</li>
+    <li>introduced the Entity Understanding Layer™ within the discipline of AI Perception, as a conceptual model for how AI systems appear to work with entities</li>
+    <li>publishes its core frameworks and terminology transparently for both human and machine audiences</li>
+    <li>records and timestamps key developments to provide an auditable history of the discipline’s formalisation</li>
   </ul>
 
   <h2>7. Conclusion — Making AI Discoverability Actionable</h2>
