--- a/legal.html
+++ b/legal.html
@@ -5,72 +5,127 @@
   <title>Legal — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <meta name="description" content="EntityWorks Legal Information and Terms of Use">
+  <meta name="description" content="Legal information and terms of use for the EntityWorks website.">
   <link rel="canonical" href="https://entityworks.ai/legal.html">
 
   <style>
-    body { font-family: system-ui, sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
-    h1 { font-size: 1.8rem; margin-bottom: 1rem; }
-    h2 { margin-top: 1.75rem; }
-    p, li { margin-bottom: 0.75rem; }
+    body {
+      font-family: system-ui, sans-serif;
+      line-height: 1.6;
+      margin: 2rem auto;
+      max-width: 800px;
+      padding: 0 1rem;
+      color: #111;
+    }
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+    h2 {
+      margin-top: 1.75rem;
+    }
+    p, li {
+      margin-bottom: 0.75rem;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Legal Information & Terms of Use</h1>
+  <h1>Legal Information &amp; Terms of Use</h1>
 
   <p><strong>Last updated: November 2025</strong></p>
 
   <p>
-    This page outlines key legal information regarding the use of the EntityWorks website
-    (https://entityworks.ai). By using this site, you agree to the following terms. If you do
-    not agree, please discontinue use of the website.
+    This page sets out key legal information regarding the use of the EntityWorks website
+    (<a href="https://entityworks.ai">https://entityworks.ai</a>). By using this site, you agree
+    to these terms. If you do not agree, please discontinue use of the website.
   </p>
 
-  <h2>1. Informational Use Only</h2>
+  <h2>1. Nature of the Content</h2>
   <p>
-    The content on this website is provided for general informational purposes about EntityWorks,
-    our methodology, and the discipline of AI Discoverability. It does not constitute advice,
-    a certification, or a commercial offer.
+    EntityWorks publishes conceptual frameworks, definitions, and models related to the disciplines of
+    AI Perception and AI Discoverability, including the EntityWorks Discoverability Index™ (EDI) and
+    the Entity Understanding Layer™. All material on this site is provided for general informational
+    purposes only. It is intended to explain how EntityWorks thinks about these disciplines and to
+    describe the structures and methodologies we are developing.
   </p>
-
-  <h2>2. Accuracy of Information</h2>
   <p>
-    We aim to provide accurate and up-to-date information. However, EntityWorks Ltd makes no guarantees,
-    representations, or warranties regarding the completeness or reliability of any content on this site.
+    Nothing on this website is intended to constitute professional advice, assurance, certification,
+    or a recommendation to take (or not take) any particular action.
   </p>
 
-  <h2>3. Intellectual Property</h2>
+  <h2>2. No Advice or Reliance</h2>
   <p>
-    All content on this site — including text, structure, design elements, and the 
-    EntityWorks Discoverability Index™ — is the intellectual property of EntityWorks Ltd.
-    You may not copy, reproduce, or distribute any material without written permission.
+    The content on this website does not take into account the specific circumstances of any
+    organisation or individual. You should not rely on any part of this site as a substitute for
+    independent advice, technical assessment, legal review, or other professional services. Any
+    decisions made based on information from this website are made at your own discretion and risk.
   </p>
 
-  <h2>4. External Links</h2>
+  <h2>3. Accuracy and Evolution of Information</h2>
   <p>
-    This website may include links to external websites. EntityWorks Ltd is not responsible for
-    the content, accuracy, or policies of third-party sites.
+    EntityWorks aims to ensure that the information presented is accurate and up to date. However,
+    the fields of AI Perception and AI Discoverability are evolving, and our frameworks and language
+    may develop over time. EntityWorks Ltd makes no guarantees, representations, or warranties,
+    whether express or implied, as to the completeness, accuracy, or reliability of any content on
+    this site.
   </p>
-
-  <h2>5. Limitation of Liability</h2>
   <p>
-    EntityWorks Ltd is not liable for any loss or damage arising from your use of this website,
-    including reliance on information presented here.
+    We reserve the right to update, refine, or revise our published materials without notice as our
+    thinking and methodologies develop.
   </p>
 
-  <h2>6. Changes to These Terms</h2>
+  <h2>4. Intellectual Property</h2>
   <p>
-    We may update these terms from time to time. The latest version will always be available on this page.
+    Unless otherwise stated, all content on this website — including text, structure, page layouts,
+    and diagrams — is the intellectual property of EntityWorks Ltd or is used with appropriate
+    permission. You may not copy, reproduce, distribute, or adapt any material from this site
+    without prior written consent from EntityWorks Ltd, except where such use is clearly permitted by
+    applicable law.
+  </p>
+  <p>
+    “EntityWorks”, “EntityWorks Discoverability Index™”, “Entity Understanding Layer™” and related
+    names, marks, and logos are trademarks or proprietary designations of EntityWorks Ltd. Other
+    product and company names mentioned on this site may be trademarks of their respective owners.
   </p>
 
-  <h2>7. Company Information</h2>
+  <h2>5. External Links</h2>
+  <p>
+    This website may include links to external websites or resources. These links are provided for
+    convenience only. EntityWorks Ltd does not endorse and is not responsible for the content,
+    accuracy, security, or policies of any third-party websites.
+  </p>
+
+  <h2>6. Limitation of Liability</h2>
+  <p>
+    To the fullest extent permitted by law, EntityWorks Ltd shall not be liable for any loss or
+    damage of any kind, whether direct, indirect, incidental, consequential, or otherwise, arising
+    out of or in connection with:
+  </p>
+  <ul>
+    <li>your use of this website;</li>
+    <li>your reliance on any information contained on this website; or</li>
+    <li>any interruption, inaccuracy, error, or omission in the content of this website.</li>
+  </ul>
+
+  <h2>7. Changes to These Terms</h2>
+  <p>
+    We may update these terms and any related legal notices from time to time. The latest version
+    will always be available on this page. Continued use of the website after changes have been
+    published will be taken as acceptance of the updated terms.
+  </p>
+
+  <h2>8. Company Information</h2>
   <p>
     EntityWorks Ltd<br>
-    Registered in England & Wales<br>
+    Registered in England &amp; Wales<br>
     Company No: 16849701<br>
     Registered Office: 82a James Carter Road, Mildenhall,<br>
     Bury St. Edmunds, England, IP28 7DE
+  </p>
+  <p>
+    For any questions regarding this notice, you can contact us at:
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
 
 </body>
