--- a/ai-discoverability-definitions.html
+++ b/ai-discoverability-definitions.html
@@ -18,85 +18,103 @@
   <meta name="theme-color" content="#ffffff">
 
   <style>
+    :root {
+      --ew-max-width: 900px;
+      --ew-accent: #0057ff;
+      --ew-border: #e0e0e0;
+      --ew-bg-soft: #f5f7ff;
+      --ew-text: #111111;
+      --ew-muted: #666666;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       line-height: 1.6;
-      margin: 2rem auto;
-      max-width: 800px;
-      padding: 0 1rem;
-      color: #111;
+      color: var(--ew-text);
+      background: #ffffff;
     }
 
-    header, footer {
-      margin-bottom: 2rem;
-    }
-
-    /* Site header / nav */
     .site-header {
-      margin-bottom: 2rem;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid var(--ew-border);
+      background: #ffffff;
     }
 
-    .nav-container {
-      max-width: 800px;
+    .nav-inner {
+      max-width: var(--ew-max-width);
       margin: 0 auto;
-      padding: 0 1rem 0.75rem;
+      padding: 0.75rem 1rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: 1.5rem;
+      gap: 1rem;
     }
 
-    .site-logo {
+    .brand {
       font-weight: 600;
       text-decoration: none;
-      color: #111;
-      font-size: 1rem;
+      color: var(--ew-text);
+      letter-spacing: 0.02em;
       white-space: nowrap;
     }
 
-    .nav-list {
-      list-style: none;
+    .site-nav {
       display: flex;
-      gap: 1rem;
-      margin: 0;
-      padding: 0;
       flex-wrap: wrap;
-      justify-content: flex-end;
-    }
-
-    .nav-link {
-      text-decoration: none;
-      color: #111;
+      gap: 0.75rem;
       font-size: 0.95rem;
     }
 
-    .nav-link:hover,
-    .nav-link:focus {
-      text-decoration: underline;
+    .site-nav a {
+      text-decoration: none;
+      color: var(--ew-text);
+      padding: 0.25rem 0.5rem;
+      border-radius: 999px;
     }
 
-    /* Page header */
-    .page-header h1 {
+    .site-nav a[aria-current="page"] {
+      background: var(--ew-bg-soft);
+      border: 1px solid var(--ew-accent);
+    }
+
+    main {
+      max-width: var(--ew-max-width);
+      margin: 2rem auto;
+      padding: 0 1rem 3rem;
+    }
+
+    header.page-header {
+      margin-bottom: 2rem;
+    }
+
+    header.page-header h1 {
       font-size: 2rem;
-      margin-bottom: 0.25rem;
+      margin: 0 0 0.5rem;
     }
 
     h2 {
       margin-top: 1.75rem;
     }
 
-    /* Footer */
-    .site-footer {
-      border-top: 1px solid #eee;
-      padding-top: 1.5rem;
+    .last-updated {
+      font-size: 0.85rem;
+      color: #888;
       margin-top: 3rem;
+    }
+
+    .site-footer {
+      border-top: 1px solid var(--ew-border);
+      padding: 1.5rem 0;
       font-size: 0.9rem;
-      color: #555;
+      color: var(--ew-muted);
     }
 
     .footer-container {
-      max-width: 800px;
+      max-width: var(--ew-max-width);
       margin: 0 auto;
       padding: 0 1rem;
       display: flex;
@@ -117,18 +135,12 @@
 
     .footer-nav-link {
       text-decoration: none;
-      color: #555;
+      color: var(--ew-muted);
     }
 
     .footer-nav-link:hover,
     .footer-nav-link:focus {
       text-decoration: underline;
-    }
-
-    .last-updated {
-      font-size: 0.85rem;
-      color: #888;
-      margin-top: 3rem;
     }
   </style>
 
@@ -262,26 +274,14 @@
 <body>
   <!-- Site header / nav -->
   <header class="site-header">
-    <div class="nav-container">
-      <a href="/index.html" class="site-logo">
-        EntityWorks
-      </a>
-
-      <nav class="site-nav" aria-label="Primary">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="/why-entityworks-exists.html" class="nav-link">Why EntityWorks</a>
-          </li>
-          <li class="nav-item">
-            <a href="/ai-discoverability-resources.html" class="nav-link">AI Discoverability</a>
-          </li>
-          <li class="nav-item">
-            <a href="/how-we-score-the-edi.html" class="nav-link">EDI</a>
-          </li>
-          <li class="nav-item">
-            <a href="/ai-perception.html" class="nav-link">AI Perception</a>
-          </li>
-        </ul>
+    <div class="nav-inner">
+      <a href="/index.html" class="brand">EntityWorks</a>
+      <nav class="site-nav" aria-label="Main navigation">
+        <a href="/index.html">Home</a>
+        <a href="/why-entityworks-exists.html">Why EntityWorks</a>
+        <a href="/ai-discoverability-resources.html" aria-current="page">AI Discoverability</a>
+        <a href="/how-we-score-the-edi.html">EDI</a>
+        <a href="/ai-perception.html">AI Perception</a>
       </nav>
     </div>
   </header>
